상품페이지_작성가이드 업데이트

--- a/docs/상품페이지_작성가이드.md
+++ b/docs/상품페이지_작성가이드.md
@@ -3,66 +3,222 @@
 ## 1. 기본 원칙
 - 공통 리소스 재사용: Google Fonts, Font Awesome, Bootstrap, `/css/sj-styles.css`
 - 로더: `/js/sj-template-loader.js` + `initializePage('<pageId>')`
-- 헤더/사이드바/로딩 오버레이는 템플릿에 포함  페이지별 본문만 채움
+- 헤더/사이드바/로딩 오버레이는 템플릿에 포함, 페이지별 본문만 채움
 - `data-menu`(사이드바)와 `initializePage`의 pageId를 반드시 일치
+- **참고**: `/pages/pharmacy/` 하위 파일 구조를 참고하여 작성 (https://disk-cms.simg.kr/pages/pharmacy/)
 
 ## 2. 파일 생성 절차
-1) **템플릿 복사**: `public/template/sj-page-template.html`  `public/pages/<카테고리>/<파일명>.html`
+1) **템플릿 복사**: `public/template/sj-page-template.html` → `public/pages/insurance/<파일명>.html`
 2) **메타 수정**:
    - `<title>`: `보험 CMS | <상품명> - <화면명>`
    - 스크립트 하단: `initializePage('<pageId>')`
-3) **본문 채우기** (`{{CONTENT}}` 자리):
-   - 카드 헤더(제목/설명, 버튼)
-   - 필터/검색 폼 (row + col 구조)
-   - 테이블(데스크톱) + 모바일 카드(필요 시)
-   - 페이징 영역(선택)
+3) **본문 채우기** (`<main class="main-content">` 내부):
+   - 카드 헤더(제목/설명, 버튼) - 선택사항
+   - **필터/검색 영역** (pharmacy/applications.html 참고):
+     - 거래처/상태/페이지 크기 필터 (select 박스)
+     - 통합 검색 입력창 (input + 검색 버튼)
+     - Bootstrap `row` + `col-*` 구조 사용
+   - **버튼 영역** (필요 시):
+     - 기능별 버튼들 (일별실적, 엑셀 다운로드, 추가 등)
+     - `btn-row` 클래스로 정렬
+   - **테이블 영역**:
+     - 데스크톱: `desktop-table` 클래스 + `table-responsive` + `table`
+     - 모바일: `mobile-cards` 클래스 (필요 시)
+     - 테이블 본문은 `id` 속성 부여 (예: `id="table_body"`)
+   - **페이징 영역**:
+     - 정보 표시: `pagination_info`
+     - 컨트롤: `pagination_controls`
 4) **전용 스크립트/스타일**(선택):
-   - JS: `/public/js/<카테고리>/<파일>.js` 추가
-   - CSS: `/public/css/<카테고리>/<파일>.css` 추가 (필요 시만)
+   - JS: `/public/js/insurance/<파일>.js` 추가
+   - CSS: `/public/css/insurance/<파일>.css` 추가 (필요 시만)
+   - 여러 기능이 분리된 경우: `pharmacy.js`, `pharmacy_company_modal.js`, `pharmacy_2.js`처럼 분리 가능
 
-## 3. 사이드바 등록 (sj-sidebar.html)
+## 3. 사이드바 등록 (menu-config.json 또는 sj-sidebar.html)
 - 계층: 예) 보험상품 > 대리운전 > KJ대리운전 > 하위 항목
-- 새 항목 추가 시:
-  - 링크: `<a href="/pages/.../xxx.html" data-menu="xxx">표시명</a>`
+- `public/config/menu-config.json`에서 메뉴 구조 관리
+- 또는 `sj-sidebar.html`에서 직접 추가:
+  - 링크: `<a href="/pages/insurance/xxx.html" data-menu="xxx">표시명</a>`
   - 서브메뉴는 `menu-title` + `submenu` 블록으로 중첩
 - 페이지에서 `initializePage('xxx')`로 호출하면 활성화/인증 체크 연동
 
-## 4. 예시 (KJ 대리운전 하위)
-- pageId  파일 경로
-  - `kj-driver-search`  `/pages/insurance/kj-driver-search.html`
-  - `kj-driver-company`  `/pages/insurance/kj-driver-company.html`
-  - `kj-driver-endorse-list`  `/pages/insurance/kj-driver-endorse-list.html`
-  - `kj-driver-code-by-policy`  `/pages/insurance/kj-driver-code-by-policy.html`
-  - `kj-driver-policy-search`  `/pages/insurance/kj-driver-policy-search.html`
-- 각 페이지는 공용 리소스 + 필터/테이블 기본 골격만 포함 (추후 JS로 데이터 연동)
+## 4. Pharmacy 페이지 구조 참고 (applications.html)
+**참고 파일**: `/pages/pharmacy/applications.html`
 
-## 5. 최소 HTML 골격 (발췌)
+### 주요 구조 패턴:
+1. **필터 영역** (`search-filter-row`):
 ```html
-<title>보험 CMS | 상품명 - 화면명</title>
-<!-- 폰트/아이콘/Bootstrap/CSS 공용 로드 -->
-...
-<div id="header-container"></div>
-<div id="sidebar-container"></div>
-<main class="main-content">
-  <div class="container-xl">
-    <div class="card">
-      <div class="card-header">...</div>
-      <div class="card-body">본문/필터/테이블</div>
+<div class="search-filter-row">
+  <div class="row align-items-end">
+    <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
+      <select id="accountFilter" class="form-control">
+        <option value="">전체 거래처</option>
+      </select>
+    </div>
+    <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
+      <select id="statusFilter" class="form-control">
+        <option value="">전체</option>
+        <option value="13" selected>승인</option>
+      </select>
+    </div>
+    <div class="col-md-6">
+      <div class="input-group">
+        <input type="text" id="search_word" class="form-control" placeholder="검색어">
+        <button class="btn btn-primary" type="button" id="search_btn">
+          <i class="fas fa-search"></i> 검색
+        </button>
+      </div>
     </div>
   </div>
-</main>
+</div>
+```
+
+2. **버튼 영역**:
+```html
+<div class="row mb-3">
+  <div class="col-12">
+    <div class="btn-row">
+      <button type="button" class="btn btn-success btn-sm" id="dailyReport">
+        <i class="fas fa-chart-line"></i> 일별실적
+      </button>
+      <button type="button" class="btn btn-primary btn-sm" id="addCompany" style="margin-left: auto;">
+        <i class="fas fa-plus"></i> 업체추가
+      </button>
+    </div>
+  </div>
+</div>
+```
+
+3. **테이블 구조**:
+```html
+<div class="desktop-table">
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover table-sm">
+      <thead class="thead-light">
+        <tr>
+          <th class="col-number">#</th>
+          <th class="col-company-name">업체명</th>
+          <!-- 반응형 클래스: d-none d-lg-table-cell -->
+        </tr>
+      </thead>
+      <tbody id="table_body">
+        <tr>
+          <td colspan="13" class="text-center py-4">데이터를 불러오는 중...</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<!-- 모바일 카드 (선택) -->
+<div class="mobile-cards" id="mobile_cards">
+  <div class="text-center py-4">데이터를 불러오는 중...</div>
+</div>
+```
+
+4. **페이징**:
+```html
+<div class="row mt-3">
+  <div class="col-md-6 col-12 mb-2">
+    <div id="pagination_info" class="dataTables_info text-center text-md-left"></div>
+  </div>
+  <div class="col-md-6 col-12">
+    <nav aria-label="Page navigation">
+      <ul class="pagination pagination-sm justify-content-center justify-content-md-end" id="pagination_controls">
+      </ul>
+    </nav>
+  </div>
+</div>
+```
+
+5. **스크립트 로드**:
+```html
 <script src="/js/sj-template-loader.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', async function() {
-    await window.sjTemplateLoader.initializePage('<pageId>');
+    await window.sjTemplateLoader.initializePage('pharmacy-applications');
   });
 </script>
+<script src="/js/insurance/main.js"></script>
+<script src="/js/insurance/modal.js"></script>
 ```
 
-## 6. 체크리스트
+## 5. Insurance 페이지 예시
+- pageId와 파일 경로:
+  - `kj-driver-search` → `/pages/insurance/kj-driver-search.html`
+  - `kj-driver-company` → `/pages/insurance/kj-driver-company.html`
+  - `kj-driver-endorse-list` → `/pages/insurance/kj-driver-endorse-list.html`
+  - `kj-driver-code-by-policy` → `/pages/insurance/kj-driver-code-by-policy.html`
+  - `kj-driver-policy-search` → `/pages/insurance/kj-driver-policy-search.html`
+
+## 6. 최소 HTML 골격
+```html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>보험 CMS | 상품명 - 화면명</title>
+  
+  <!-- 공용 리소스 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/sj-styles.css" rel="stylesheet">
+</head>
+<body>
+  <!-- 로딩 오버레이 -->
+  <div class="loading-overlay" id="loadingOverlay">
+    <div class="loading">
+      <i class="fas fa-spinner"></i>
+      <div>페이지를 불러오는 중...</div>
+    </div>
+  </div>
+
+  <!-- 헤더/사이드바 컨테이너 -->
+  <div id="header-container"></div>
+  <div class="sidebar-overlay" id="sidebarOverlay"></div>
+  <div id="sidebar-container"></div>
+
+  <!-- 메인 컨텐츠 -->
+  <main class="main-content">
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <!-- 필터/검색 영역 -->
+            <!-- 버튼 영역 -->
+            <!-- 테이블 영역 -->
+            <!-- 페이징 영역 -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- 스크립트 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/sj-template-loader.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', async function() {
+      await window.sjTemplateLoader.initializePage('<pageId>');
+    });
+  </script>
+  <!-- 전용 JS 파일들 -->
+</body>
+</html>
+```
+
+## 7. 체크리스트
 - [ ] 사이드바 `data-menu`와 `initializePage`의 pageId 일치 여부 확인
 - [ ] 공용 리소스(폰트/FA/Bootstrap/`sj-styles.css`) 로드 여부
 - [ ] 헤더/사이드바 컨테이너 존재 여부 (`header-container`, `sidebar-container`)
 - [ ] 로딩 오버레이/오류 없이 페이지 로드 확인
+- [ ] 필터/검색 영역 구조 확인 (pharmacy 페이지 참고)
+- [ ] 테이블 반응형 클래스 적용 (`d-none d-lg-table-cell` 등)
+- [ ] 모바일 카드 영역 구현 (필요 시)
+- [ ] 페이징 영역 구현
 - [ ] 전용 JS/CSS가 필요할 때만 추가 (불필요한 신규 CSS 생성 지양)
+- [ ] Pharmacy 페이지 구조와 일관성 유지
 
