--- a/docs/상품페이지_작성가이드.md
+++ b/docs/상품페이지_작성가이드.md
@@ -210,7 +210,125 @@
 </html>
 ```
 
-## 7. 체크리스트
+## 7. 백엔드 통신 구조
+
+### 아키텍처 개요
+모든 상품 페이지는 동일한 백엔드 통신 구조를 사용합니다:
+```
+프론트엔드 (HTML/JS) → Node.js 프록시 서버 → PHP 백엔드 API → MySQL 데이터베이스
+```
+
+### Pharmacy (약국배상책임보험)
+- **프론트엔드**: `https://disk-cms.simg.kr/pages/pharmacy/`
+- **Node.js 프록시**: `/api/pharmacy/*` (routes/pharmacy.js)
+- **PHP 백엔드**: `https://imet.kr/api/pharmacy/*` 또는 `https://silbo.kr/api/pharmacy/*`
+- **데이터베이스**: MySQL
+
+**예시 API 호출 흐름**:
+```javascript
+// 프론트엔드에서 호출
+fetch('/api/pharmacy/list?page=1&limit=20')
+  ↓
+// Node.js 프록시 (routes/pharmacy.js)
+router.get('/list', async (req, res) => {
+  const response = await axios.get('https://imet.kr/api/pharmacy/pharmacy-list.php', {
+    params: req.query
+  });
+  res.json(response.data);
+})
+  ↓
+// PHP 백엔드 API (imet.kr/api/pharmacy/pharmacy-list.php)
+// MySQL 쿼리 실행 후 JSON 응답 반환
+```
+
+### Insurance (보험상품 - KJ대리운전 등)
+- **프론트엔드**: `https://disk-cms.simg.kr/pages/insurance/`
+- **Node.js 프록시**: `/api/insurance/*` (routes/insurance.js - 생성 필요)
+- **PHP 백엔드**: `https://pcikorea.com/api/insurance/*`
+- **로컬 개발 경로**: `/pci0327/api/insurance/*` (로컬에서 PHP 파일 작성 위치)
+- **데이터베이스**: MySQL
+
+**구조는 Pharmacy와 동일하며, PHP 백엔드 서버만 다름**:
+- Pharmacy: `imet.kr` 또는 `silbo.kr`
+- Insurance: `pcikorea.com`
+
+**중요**: `pcikorea.com/api/insurance/*`에 배포할 PHP 파일은 로컬 개발 환경에서 `/pci0327/api/insurance/` 경로에 작성합니다.
+
+### Node.js 프록시 라우터 작성 가이드
+
+**1. 라우터 파일 생성**: `routes/insurance.js`
+```javascript
+const express = require('express');
+const axios = require('axios');
+const router = express.Router();
+
+// PHP API 기본 URL 설정
+const PHP_API_BASE_URL = 'https://pcikorea.com/api/insurance';
+const DEFAULT_TIMEOUT = 30000;
+
+// 공통 헤더 설정
+const getDefaultHeaders = () => ({
+  'Accept': 'application/json',
+  'Content-Type': 'application/json'
+});
+
+// 예시: 목록 조회 API
+router.get('/list', async (req, res) => {
+  try {
+    const apiUrl = `${PHP_API_BASE_URL}/insurance-list.php`;
+    const params = req.query;
+    
+    const response = await axios.get(apiUrl, {
+      params: params,
+      timeout: DEFAULT_TIMEOUT,
+      headers: getDefaultHeaders()
+    });
+    
+    res.json(response.data);
+  } catch (error) {
+    console.error('Insurance API 프록시 오류:', error.message);
+    res.status(error.response?.status || 500).json({
+      success: false,
+      error: error.message
+    });
+  }
+});
+
+module.exports = router;
+```
+
+**2. server.js에 라우터 등록**:
+```javascript
+const insuranceRoutes = require('./routes/insurance');
+app.use('/api/insurance', insuranceRoutes);
+```
+
+**3. 프론트엔드에서 API 호출**:
+```javascript
+// JavaScript 파일에서
+const response = await fetch('/api/insurance/list?page=1&limit=20');
+const data = await response.json();
+```
+
+### 주요 API 엔드포인트 패턴
+
+Pharmacy와 Insurance 모두 동일한 패턴을 따릅니다:
+
+| 기능 | HTTP 메서드 | 프록시 경로 | PHP 백엔드 경로 |
+|------|------------|------------|----------------|
+| 목록 조회 | GET | `/api/{category}/list` | `/{category}-list.php` |
+| 상세 조회 | GET | `/api/{category}/detail/:id` | `/{category}-detail.php` |
+| 생성 | POST | `/api/{category}/create` | `/{category}-create.php` |
+| 수정 | PUT | `/api/{category}/update/:id` | `/{category}-update.php` |
+| 삭제 | DELETE | `/api/{category}/delete/:id` | `/{category}-delete.php` |
+
+**참고**: 
+- `{category}`는 `pharmacy` 또는 `insurance` 등 카테고리명
+- Pharmacy는 `imet.kr` 또는 `silbo.kr` 사용
+- Insurance는 `pcikorea.com` 사용
+- **로컬 개발 경로**: Insurance PHP 파일은 `/pci0327/api/insurance/` 경로에 작성 (배포 시 `pcikorea.com/api/insurance/`로 업로드)
+
+## 8. 체크리스트
 - [ ] 사이드바 `data-menu`와 `initializePage`의 pageId 일치 여부 확인
 - [ ] 공용 리소스(폰트/FA/Bootstrap/`sj-styles.css`) 로드 여부
 - [ ] 헤더/사이드바 컨테이너 존재 여부 (`header-container`, `sidebar-container`)
@@ -221,4 +339,7 @@
 - [ ] 페이징 영역 구현
 - [ ] 전용 JS/CSS가 필요할 때만 추가 (불필요한 신규 CSS 생성 지양)
 - [ ] Pharmacy 페이지 구조와 일관성 유지
+- [ ] Node.js 프록시 라우터 생성 및 server.js 등록 확인
+- [ ] PHP 백엔드 서버 주소 확인 (pharmacy: imet.kr/silbo.kr, insurance: pcikorea.com)
+- [ ] API 호출 경로 확인 (`/api/{category}/*` 형식)
 
