--- a/docs/보험료-입력-페이지-고도화-기획안.md
+++ b/docs/보험료-입력-페이지-고도화-기획안.md
@@ -23,22 +23,23 @@
 
 #### 1.2 담당자별 연령 구간별 보험료 테이블
 - **담당자 구분**: 2012Member 테이블 (num: 1~4)
-- **연령 구간**: 보험사별로 다름
-  - **KB (insurance=3)**:
-    - 2023-11-01 이전: 6개 구간 (19~28, 29~40, 41~49, 50~55, 56~65, 66세 이상)
-    - 2023-11-01 이후: 7개 구간 (19~28, 29~40, 41~49, 50~55, 56~60, 61~65, 66세 이상)
-  - **현대 (insurance=4)**:
-    - 2022-01-01 이전: 5개 구간
-    - 2022-01-01 이후: 6개 구간 (19~28, 29~40, 41~49, 50~55, 56~65, 66세 이상)
-  - **롯데 (insurance=5)**: 3개 구간 (26~36, 37~58, 59세 이상)
+- **연령 구간**: `kj_insurance_premium_data` 테이블의 `policyNum`으로 조회하여 결정
+  - `kj_insurance_premium_data` 테이블에서 `policyNum = 증권번호`로 조회
+  - `start_month`, `end_month` 필드로 연령 구간 결정
+  - 보험사별/계약일별 하드코딩 제거, 데이터베이스 기반으로 동적 처리
+- **담당자 필터링**: 대리기사 인원이 0인 담당자는 표시하지 않음
 
 #### 1.3 보험료 계산 항목
 각 연령 구간별로 다음 항목 계산:
 1. **인원 (driver_count)**: 해당 연령 구간의 대리기사 수
-2. **1/10 보험료 (payment10_premium1)**: 10회 분납 중 1회 보험료
-3. **회사보험료 (company_premium)**: 보험회사 납입 보험료 총합 (할인할증 적용 전)
-4. **환산보험료 (converted_premium)**: 회사보험료를 월 단위로 환산 (× 10/12)
+2. **1/10 보험료 (payment10_premium1)**: `kj_insurance_premium_data.payment10_premium1` (10회 분납 중 1회 보험료)
+3. **회사보험료 (company_premium)**: 보험회사 납입 보험료 총합 (할인할증 적용 후)
+   - 각 대리기사별로 `(1/10보험료 × 할인할증)` 계산 후 합산
+   - 계산식: `Σ(1/10보험료 × 할인할증률)` (각 대리기사별)
+4. **환산보험료 (converted_premium)**: 회사보험료를 월 단위로 환산 (`회사보험료 × 10/12`)
 5. **월보험료 (monthly_premium)**: 실제 월 납입 보험료 (할인할증 적용 후)
+   - 각 대리기사별로 `kj_premium_data.monthly_premium_total × 할인할증` 계산 후 합산
+   - `2012DaeriMember.CertiTableNum = kj_premium_data.cNum` 조건으로 조회
 
 #### 1.4 할인할증 적용
 - **데이터 소스**: `2019rate` 테이블 (jumin, policy 기준)
@@ -113,13 +114,17 @@
 
 **주요 로직**:
 1. `2012Certi` 테이블에서 증권 정보 조회
-2. 보험사 코드에 따라 연령 구간 결정
+2. `kj_insurance_premium_data` 테이블에서 `policyNum = 증권번호`로 연령 구간 조회
+   - `start_month`, `end_month`로 연령 구간 결정
+   - 각 구간별 `payment10_premium1` 조회
 3. 각 담당자(1~4)별로:
    - 연령 구간별 대리기사 조회 (`2012DaeriMember` + `2012DaeriCompany` 조인)
-   - 할인할증률 적용 (`2019rate` 테이블)
-   - 보험료 계산 (`kj_insurance_premium_data` 또는 `2012Certi` 테이블)
-   - 월보험료 계산 (`kj_premium_data` 테이블 또는 환산값)
-4. 소계 및 합계 계산
+   - 각 대리기사별 할인할증률 적용 (`2019rate` 테이블 또는 `2012DaeriMember.rate`)
+   - 회사보험료 계산: `Σ(1/10보험료 × 할인할증률)` (각 대리기사별)
+   - 월보험료 계산: `Σ(kj_premium_data.monthly_premium_total × 할인할증률)` (각 대리기사별)
+   - 소계 계산
+4. 대리기사 인원이 0인 담당자는 제외
+5. 전체 합계 계산
 
 #### 2.1.2 Node.js 프록시 라우트 추가
 **파일**: `disk-cms/routes/insurance/kj-driver-company.js`  
@@ -203,19 +208,19 @@ MySQL 데이터베이스
 ```
 1. 증권 정보 조회 (2012Certi)
    ↓
-2. 보험사 코드 확인 (insurance: 3, 4, 5)
+2. kj_insurance_premium_data 테이블에서 연령 구간 조회 (policyNum = 증권번호)
    ↓
-3. 계약일 기준 연령 구간 결정
+3. 각 연령 구간별 처리:
+   a. 각 담당자(1~4)별로:
+      - 담당자 정보 조회 (2012Member)
+      - 해당 연령 구간의 대리기사 조회 (2012DaeriMember + 2012DaeriCompany)
+      - 각 대리기사별 할인할증률 적용 (2019rate 또는 2012DaeriMember.rate)
+      - 회사보험료 계산: Σ(1/10보험료 × 할인할증률)
+      - 월보험료 계산: Σ(kj_premium_data.monthly_premium_total × 할인할증률)
+      - 소계 계산
+   b. 대리기사 인원이 0인 담당자는 제외
    ↓
-4. 각 담당자별 처리 (1~4):
-   a. 담당자 정보 조회 (2012Member)
-   b. 연령 구간별 대리기사 조회
-   c. 할인할증률 적용 (2019rate)
-   d. 보험료 계산
-   e. 월보험료 계산
-   f. 소계 계산
-   ↓
-5. 전체 합계 계산
+4. 전체 합계 계산
 ```
 
 ---
@@ -237,18 +242,19 @@ MySQL 데이터베이스
 
 ## 📝 구현 단계
 
-### Phase 1: 백엔드 API 구현 (우선순위 1)
-- [ ] `kj-premium-by-manager.php` 생성
-- [ ] 보험사별 연령 구간 로직 구현
-- [ ] 담당자별 데이터 조회 로직 구현
-- [ ] 할인할증률 적용 로직 구현
-- [ ] 보험료 계산 로직 구현
-- [ ] 소계/합계 계산 로직 구현
-- [ ] 에러 처리 및 로깅
+### Phase 1: 백엔드 API 구현 (우선순위 1) ✅ 완료
+- [x] `kj-premium-by-manager.php` 생성
+- [x] `kj_insurance_premium_data` 테이블 기반 연령 구간 조회 로직 구현
+- [x] 담당자별 데이터 조회 로직 구현
+- [x] 할인할증률 적용 로직 구현 (2019rate 우선, 없으면 2012DaeriMember.rate)
+- [x] 보험료 계산 로직 구현 (회사보험료, 월보험료)
+- [x] 소계/합계 계산 로직 구현
+- [x] 대리기사 인원이 0인 담당자 제외 로직 구현
+- [x] 에러 처리 및 로깅
 
-### Phase 2: Node.js 프록시 연동 (우선순위 2)
-- [ ] `kj-driver-company.js`에 라우트 추가
-- [ ] 프록시 테스트
+### Phase 2: Node.js 프록시 연동 (우선순위 2) ✅ 완료
+- [x] `kj-driver-company.js`에 라우트 추가 (`/kj-premium/by-manager`)
+- [ ] 프록시 테스트 (테스트 필요)
 
 ### Phase 3: 프론트엔드 구현 (우선순위 3)
 - [ ] HTML 페이지/모달 구조 생성
