보험료 통계 고도화

--- a/docs/보험료-입력-페이지-고도화-기획안.md
+++ b/docs/보험료-입력-페이지-고도화-기획안.md
@@ -56,12 +56,44 @@
 
 ### 2.1 백엔드 API 설계
 
-#### 2.1.1 신규 API: `kj-premium-by-manager.php`
-**경로**: `/pci0327/api/insurance/kj-premium-by-manager.php`  
+#### 2.1.1 기존 API 확장: `kj-policy-stats.php`
+**경로**: `/pci0327/api/insurance/kj-policy-stats.php`  
 **메서드**: GET  
-**파라미터**: `certi` (증권번호)
+**파라미터**: 
+- `certi` (증권번호, 필수)
+- `by_manager` (담당자별 조회 여부, 선택, 기본값: 0)
+  - `by_manager=1`: 담당자별 데이터 포함
+  - `by_manager=0` 또는 생략: 기존 방식 (전체 통계만)
 
-**응답 구조**:
+**응답 구조** (`by_manager=0` 또는 생략 시 - 기존 방식):
+```json
+{
+  "success": true,
+  "certi": "2025-N654290",
+  "member_count": 118,
+  "age_ranges": [
+    {
+      "age_range": "19~28세",
+      "start_month": 19,
+      "end_month": 28,
+      "driver_count": 0,
+      "payment10_premium1": 65906,
+      "company_premium": 659060,
+      "converted_premium": 549217,
+      "monthly_premium": 0
+    }
+  ],
+  "summary": {
+    "total_drivers": 93,
+    "total_payment10_premium1": 9911218,
+    "total_company_premium": 99112180,
+    "total_converted_premium": 82593491,
+    "total_monthly_premium": 7895160
+  }
+}
+```
+
+**응답 구조** (`by_manager=1` 시 - 담당자별 포함):
 ```json
 {
   "success": true,
@@ -74,6 +106,12 @@
     "nab": 2,
     "inwon": 118,
     "insurance": 3
+  },
+  "age_ranges": [
+    // ... 기존 전체 통계 데이터
+  ],
+  "summary": {
+    // ... 기존 전체 합계
   },
   "managers": [
     {
@@ -89,8 +127,7 @@
           "company_premium": 659060,
           "converted_premium": 549217,
           "monthly_premium": 0
-        },
-        // ... 더 많은 연령 구간
+        }
       ],
       "subtotal": {
         "total_drivers": 93,
@@ -99,8 +136,7 @@
         "total_converted_premium": 82593491,
         "total_monthly_premium": 7895160
       }
-    },
-    // ... 더 많은 담당자
+    }
   ],
   "grand_total": {
     "total_drivers": 93,
@@ -126,9 +162,10 @@
 4. 대리기사 인원이 0인 담당자는 제외
 5. 전체 합계 계산
 
-#### 2.1.2 Node.js 프록시 라우트 추가
+#### 2.1.2 Node.js 프록시 라우트 (기존 라우트 활용)
 **파일**: `disk-cms/routes/insurance/kj-driver-company.js`  
-**라우트**: `GET /api/insurance/kj-premium/by-manager?certi=증권번호`
+**기존 라우트**: `GET /api/insurance/kj-code/policy-num-stats?certi=증권번호&by_manager=1`
+- 기존 라우트에 `by_manager` 파라미터 추가 지원
 
 ---
 
@@ -242,19 +279,20 @@ MySQL 데이터베이스
 
 ## 📝 구현 단계
 
-### Phase 1: 백엔드 API 구현 (우선순위 1) ✅ 완료
-- [x] `kj-premium-by-manager.php` 생성
-- [x] `kj_insurance_premium_data` 테이블 기반 연령 구간 조회 로직 구현
-- [x] 담당자별 데이터 조회 로직 구현
-- [x] 할인할증률 적용 로직 구현 (2019rate 우선, 없으면 2012DaeriMember.rate)
-- [x] 보험료 계산 로직 구현 (회사보험료, 월보험료)
-- [x] 소계/합계 계산 로직 구현
-- [x] 대리기사 인원이 0인 담당자 제외 로직 구현
-- [x] 에러 처리 및 로깅
+### Phase 1: 백엔드 API 확장 (우선순위 1) 🔄 진행 중
+- [ ] `kj-policy-stats.php` 파일에 담당자별 기능 추가
+- [ ] `by_manager` 파라미터 처리 로직 추가
+- [ ] 증권 정보 조회 로직 추가 (`certi_info`)
+- [ ] 담당자별 데이터 조회 로직 구현
+- [ ] 할인할증률 적용 로직 구현 (2019rate 우선, 없으면 2012DaeriMember.rate)
+- [ ] 보험료 계산 로직 구현 (회사보험료, 월보험료)
+- [ ] 소계/합계 계산 로직 구현
+- [ ] 대리기사 인원이 0인 담당자 제외 로직 구현
+- [ ] 기존 기능 호환성 유지 (`by_manager=0` 또는 생략 시)
 
-### Phase 2: Node.js 프록시 연동 (우선순위 2) ✅ 완료
-- [x] `kj-driver-company.js`에 라우트 추가 (`/kj-premium/by-manager`)
-- [ ] 프록시 테스트 (테스트 필요)
+### Phase 2: Node.js 프록시 연동 (우선순위 2)
+- [ ] 기존 라우트에 `by_manager` 파라미터 전달 확인
+- [ ] 프록시 테스트
 
 ### Phase 3: 프론트엔드 구현 (우선순위 3)
 - [ ] HTML 페이지/모달 구조 생성
