보험료 입력 고도화

--- a/docs/kj/보험료-입력-페이지-고도화-기획안.md
+++ b/docs/kj/보험료-입력-페이지-고도화-기획안.md
@@ -279,16 +279,18 @@ MySQL 데이터베이스
 
 ## 📝 구현 단계
 
-### Phase 1: 백엔드 API 확장 (우선순위 1) 🔄 진행 중
-- [ ] `kj-policy-stats.php` 파일에 담당자별 기능 추가
-- [ ] `by_manager` 파라미터 처리 로직 추가
-- [ ] 증권 정보 조회 로직 추가 (`certi_info`)
-- [ ] 담당자별 데이터 조회 로직 구현
-- [ ] 할인할증률 적용 로직 구현 (2019rate 우선, 없으면 2012DaeriMember.rate)
-- [ ] 보험료 계산 로직 구현 (회사보험료, 월보험료)
-- [ ] 소계/합계 계산 로직 구현
-- [ ] 대리기사 인원이 0인 담당자 제외 로직 구현
-- [ ] 기존 기능 호환성 유지 (`by_manager=0` 또는 생략 시)
+### Phase 1: 백엔드 API 확장 (우선순위 1) ✅ **완료**
+- [x] `kj-policy-stats.php` 파일에 담당자별 기능 추가
+- [x] `by_manager` 파라미터 처리 로직 추가
+- [x] 증권 정보 조회 로직 추가 (`certi_info`)
+- [x] 담당자별 데이터 조회 로직 구현
+- [x] 할인할증률 적용 로직 구현 (2019rate 우선, 없으면 2012DaeriMember.rate)
+- [x] 보험료 계산 로직 구현 (회사보험료, 월보험료)
+- [x] 소계/합계 계산 로직 구현
+- [x] 대리기사 인원이 0인 담당자 제외 로직 구현
+- [x] 기존 기능 호환성 유지 (`by_manager=0` 또는 생략 시)
+
+**참고**: Phase 1 개발이 완료되었습니다. 상세 현황은 `kj-보험료-입력-페이지-고도화-현황.md` 파일을 참조하세요.
 
 ### Phase 2: Node.js 프록시 연동 (우선순위 2)
 - [ ] 기존 라우트에 `by_manager` 파라미터 전달 확인
