--- a/docs/staff/주4일-고도화-판단분석.md
+++ b/docs/staff/주4일-고도화-판단분석.md
@@ -11,12 +11,14 @@
 
 | 구분 | 기존 시스템 | 새로운 운영 원칙 |
 |------|------------|-----------------|
-| **순환 방식** | 5개월 주기 (금→월→화→수→목→금) | 월 단위 순환 (월→화→수→목→금→월) |
-| **기준점** | 첫 번째 월요일 기준 | 월 단위로 요일 순환 |
-| **구현 방식** | `shift_week` 필드 (1-5), 5개월 모듈러 연산 | 매월 다음 요일로 이동 |
+| **순환 방식** | 5개월 주기 (금→월→화→수→목→금) | **4주 단위** 순환 (금→목→수→화→월→금) |
+| **순환 방향** | 정방향 (금→월→화→수→목) | **반대 방향** (금→목→수→화→월) |
+| **기준점** | 첫 번째 월요일 기준 | 4주(28일) 단위로 요일 순환 |
+| **구현 방식** | `shift_week` 필드 (1-5), 5개월 모듈러 연산 | 4주 주기, 반대 방향 이동 |
+| **일시적 변경** | 불가능 (자동 순환만) | **가능** (업무 대체자/팀장 승인 필요) |
 | **호환성** | ❌ 완전히 다른 로직 | |
 
-**판단**: 순환 로직이 완전히 다름 → **핵심 로직 수정 필요**
+**판단**: 순환 로직이 완전히 다름 (방향, 주기, 일시적 변경 기능) → **핵심 로직 대폭 수정 필요**
 
 ---
 
@@ -58,16 +60,18 @@
 
 ---
 
-### 5. 휴무일 변경
+### 5. 휴무일 일시적 변경 (임시 변경)
 
 | 구분 | 기존 시스템 | 새로운 운영 원칙 |
 |------|------------|-----------------|
-| **변경 허용** | 명시된 규칙 없음 (시프트 자동 순환) | 월 1회에 한해 변경 허용 |
-| **변경 후 순환** | 자동 시프트 순환 | 변경 후에도 다음 월부터 순환 원칙 따름 |
-| **구현 방식** | 자동 계산만 가능 | 변경 요청 기능, 변경 이력 관리 |
-| **호환성** | ⚠️ 부분 호환 (순환 로직 재활용 가능) | |
+| **일시적 변경** | 불가능 (자동 순환만) | 특정 주만 다른 요일로 변경 가능 |
+| **변경 조건** | 없음 | 업무 대체자 또는 팀장 승인 필요 |
+| **변경 범위** | 없음 | 해당 주에만 적용, 다음 주부터는 원래 순환 복귀 |
+| **예시** | 없음 | 원래 화요일 휴무 → 그 주만 금요일 휴무 (승인 후) |
+| **구현 방식** | 없음 | 변경 요청, 승인 워크플로우, 변경 이력 관리 |
+| **호환성** | ❌ 완전히 새로운 기능 | |
 
-**판단**: 새로운 기능 추가 → **신규 개발 + 순환 로직 재활용**
+**판단**: 완전히 새로운 기능 → **신규 개발 필요 (승인 워크플로우 포함)**
 
 ---
 
@@ -147,13 +151,15 @@
 ### Phase 2: 핵심 로직 교체 (순환 시스템)
 
 1. **순환 로직 변경**
-   - 기존: 5개월 주기 모듈러 연산
-   - 신규: 월 단위 다음 요일 이동
-   - 함수: `CalculatePersonalShiftWeek` → `CalculateNextMonthOffDay`
+   - 기존: 5개월 주기 모듈러 연산 (정방향)
+   - 신규: **4주 단위 반대 방향** 순환 (금→목→수→화→월→금)
+   - 함수: `CalculatePersonalShiftWeek` → `CalculateOffDayByWeekCycle`
+   - 기준: 4주(28일) 단위로 한 요일씩 역방향 이동
 
-2. **데이터 구조 정리**
-   - `shift_week` 필드 미사용 처리
-   - `users.work_days` JSON 구조 단순화
+2. **데이터 구조 변경**
+   - `shift_week` 필드 제거 또는 대체
+   - `users.work_days` JSON에 `base_off_day`, `cycle_start_date` 추가
+   - `work_schedules` 테이블에 `temporary_change` JSON 필드 추가 (일시적 변경 기록)
 
 ### Phase 3: 반차 시스템 수정
 
@@ -177,9 +183,11 @@
    - 공휴일 포함 주 감지
    - 반차 분할 제한 로직
 
-3. **휴무일 변경 기능**
-   - 월 1회 변경 허용 로직
-   - 변경 이력 관리 (필요 시)
+3. **휴무일 일시적 변경 기능**
+   - 특정 주만 다른 요일로 변경 요청 기능
+   - 업무 대체자/팀장 승인 워크플로우
+   - 변경 이력 관리 (`work_schedules.temporary_change` JSON)
+   - 해당 주에만 적용, 다음 주부터 원래 순환 복귀
 
 ### Phase 5: 프론트엔드 업데이트
 
@@ -205,27 +213,55 @@ ALTER TABLE users
 ADD COLUMN hire_date DATE COMMENT '입사일 (수습 기간 계산용)' 
 AFTER created_at;
 
--- 2. work_schedules 테이블 구조는 유지
--- shift_week 필드는 사용하지 않음 (DROP 불필요, 단순 미사용)
+-- 2. users.work_days JSON 구조 변경
+-- 기존: initial_off_day, current_shift_week
+-- 신규: base_off_day, cycle_start_date (4주 주기 시작일)
 
--- 3. holidays 테이블 확인 (공휴일 처리용)
+-- 3. work_schedules 테이블에 일시적 변경 기록 추가
+ALTER TABLE work_schedules 
+ADD COLUMN temporary_change JSON COMMENT '특정 주의 일시적 휴무일 변경 정보' 
+AFTER work_days;
+
+-- temporary_change 예시 구조:
+-- {
+--   "week_start_date": "2025-01-06",  // 해당 주 시작일 (월요일)
+--   "original_off_day": 2,             // 원래 휴무일 (화요일)
+--   "temporary_off_day": 5,            // 임시 휴무일 (금요일)
+--   "changed_by": "user@example.com",  // 변경 요청자
+--   "approved_by": "manager@example.com", // 승인자
+--   "approval_date": "2025-01-05",     // 승인일
+--   "reason": "업무 대체자 확인 후 변경"
+-- }
+
+-- 4. shift_week 필드 제거 또는 미사용 처리 (4주 주기로 대체)
+-- ALTER TABLE work_schedules DROP COLUMN shift_week;  -- 또는 단순 미사용
+
+-- 5. holidays 테이블 확인 (공휴일 처리용)
 -- 이미 있다면 사용, 없다면 생성 필요
 ```
 
 ### 백엔드 (API)
 
 1. **순환 로직 함수 변경**
-   - `routes/staff/work-schedules.js`의 `getNextMonthOffDay` 함수 수정
-   - 5개월 주기 → 월 단위 순환
+   - `routes/staff/work-schedules.js`의 순환 계산 함수 전체 재작성
+   - 5개월 주기 → **4주 단위 반대 방향** 순환
+   - 함수명: `CalculateOffDayByWeekCycle(cycle_start_date, current_date)`
+   - 로직: 4주(28일)마다 한 요일씩 역방향 이동 (금→목→수→화→월→금)
 
-2. **반차 신청 로직 수정**
+2. **일시적 휴무일 변경 API 추가**
+   - `POST /api/staff/work-schedules/temporary-change` - 변경 요청
+   - `GET /api/staff/work-schedules/pending-changes` - 승인 대기 목록 (팀장용)
+   - `POST /api/staff/work-schedules/approve-change/:changeId` - 승인/거부
+   - 업무 대체자 확인 로직 (같은 주에 다른 직원이 해당 요일 근무 중인지 확인)
+
+3. **반차 신청 로직 수정**
    - 같은 주 검증 추가
    - `is_emergency` 플래그 제거
 
-3. **수습 기간 체크 미들웨어 추가**
+4. **수습 기간 체크 미들웨어 추가**
    - 4일제 조회/신청 시 수습 기간 체크
 
-4. **공휴일 처리 로직 추가**
+5. **공휴일 처리 로직 추가**
    - 공휴일 포함 주 감지
    - 반차 분할 제한
 
