주 4일 근무 정리

--- a/docs/staff/주4일-운영원칙-상세.md
+++ b/docs/staff/주4일-운영원칙-상세.md
@@ -263,12 +263,18 @@ function isProbationPeriod(hireDate, targetDate) {
 
 ## 7. 데이터 구조 설계
 
+> **참고**: 실제 DB 스키마 분석은 [주4일 DB 스키마 분석](./주4일-DB-스키마-분석.md) 문서를 참조하세요.
+
 ### 7.1 users 테이블
 
+**현재 상태**: `hire_date` 필드는 이미 존재함 ✅
+
 ```sql
+-- work_days JSON 필드 추가 필요
 ALTER TABLE users 
-ADD COLUMN hire_date DATE COMMENT '입사일 (수습 기간 계산용)' 
-AFTER created_at;
+ADD COLUMN work_days json DEFAULT NULL 
+COMMENT '개인 시프트 정보: {"base_off_day": 2, "cycle_start_date": "2025-01-06", "initial_selection_date": "2025-01-06"}' 
+AFTER work_schedule;
 
 -- work_days JSON 구조
 {
@@ -280,10 +286,13 @@ AFTER created_at;
 
 ### 7.2 work_schedules 테이블
 
+**현재 상태**: `work_days` JSON 필드는 이미 존재함 ✅, `temporary_change` 필드 추가 필요
+
 ```sql
 -- 일시적 변경 기록 필드 추가
 ALTER TABLE work_schedules 
-ADD COLUMN temporary_change JSON COMMENT '특정 주의 일시적 휴무일 변경 정보' 
+ADD COLUMN temporary_change json DEFAULT NULL 
+COMMENT '특정 주의 일시적 휴무일 변경 정보' 
 AFTER work_days;
 
 -- work_days JSON 구조
