주4일 근무 정리

--- a/docs/staff/공휴일-학습-가이드.md
+++ b/docs/staff/공휴일-학습-가이드.md
@@ -21,7 +21,7 @@
 
 ### 1.1 공휴일이란?
 
-공휴일은 국가에서 정한 법정 휴일로, 모든 근로자가 쉬는 날입니다. 주 4일 근무제 시스템에서는 공휴일이 있는 주는 **주 4일 근무가 해제**됩니다.
+공휴일은 국가에서 정한 법정 휴일로, 모든 근로자가 쉬는 날입니다. 주 4일 근무제 시스템에서는 공휴일이 있는 주도 **주 4일 근무를 유지**합니다 (공휴일 1일 + 평일 4일 근무).
 
 ### 1.2 공휴일의 역할
 
@@ -121,20 +121,21 @@ while (currentWeekStart <= targetWeekStart) {
 }
 ```
 
-#### ✅ 규칙 3: 공휴일 주는 주 4일 근무 해제
+#### ✅ 규칙 3: 공휴일 주도 주 4일 근무 유지
 
-공휴일이 포함된 주의 모든 날짜는 `is_off_day: false`가 됩니다.
+공휴일이 포함된 주도 주 4일 근무를 유지합니다. 공휴일이 있는 날은 공휴일로 쉬고, 휴무일은 별도로 적용됩니다.
 
 ```javascript
 // work-schedules.js에서 일정 생성 시
-if (hasHolidayInWeek(weekStart, holidays)) {
-  // 공휴일 포함 주: 모든 날짜가 근무일
-  isOffDay = false;
-} else {
-  // 일반 주: 휴무일 계산
-  isOffDay = (dayOfWeek === offDay);
-}
+// 공휴일 포함 주도 휴무일은 그대로 적용됨
+const isOffDay = (dayOfWeek === offDay) && !isHolidayDate;
+// 공휴일이 있는 날은 is_holiday: true로 표시됨
 ```
+
+**예시**:
+- 공휴일: 목요일
+- 휴무일: 화요일
+- 결과: 공휴일(목) + 휴무일(화) = 주 4일 근무 (월/수/금 근무)
 
 ---
 
