--- a/docs/staff/주4일-근무제-통합-가이드.md
+++ b/docs/staff/주4일-근무제-통합-가이드.md
@@ -26,7 +26,7 @@
 
 - **근무 주수**: 주 5일 중 4일 근무, 1일 휴무
 - **사이클**: 4주 단위로 휴무일이 순환 (시프트)
-- **공휴일 처리**: 평일에 공휴일이 있는 주는 해당 주만 주 4일 근무 해제
+- **공휴일 처리**: 평일에 공휴일이 있는 주도 주 4일 근무를 유지 (공휴일 1일 + 평일 4일 근무)
 
 ### 1.2 주요 특징
 
@@ -196,9 +196,10 @@ function hasHolidayInWeek(weekStartDate, holidays) {
 
 ### 5.2 공휴일 주 처리
 
-- **공휴일 주**: 해당 주의 모든 날짜가 `is_off_day: false` (주 4일 근무 해제)
+- **공휴일 주**: 공휴일이 있는 날은 공휴일로 쉬고, 휴무일은 별도로 적용됨 (주 4일 근무 유지)
 - **사이클 계산**: 공휴일 주는 사이클에서 제외 (카운트하지 않음)
 - **다음 사이클**: 공휴일 주를 건너뛰고 다음 공휴일이 아닌 주부터 계산
+- **예시**: 공휴일(목) + 휴무일(화) = 주 4일 근무 (공휴일 1일 + 평일 4일 근무)
 
 ---
 
