헤더 표시 설정

--- a/docs/상품페이지_작성가이드.md
+++ b/docs/상품페이지_작성가이드.md
@@ -41,6 +41,82 @@
   - 서브메뉴는 `menu-title` + `submenu` 블록으로 중첩
 - 페이지에서 `initializePage('xxx')`로 호출하면 활성화/인증 체크 연동
 
+## 3-1. 헤더 업데이트 설정
+
+좌측 메뉴를 클릭하면 헤더(상단 바)의 페이지 제목과 설명이 자동으로 업데이트됩니다.
+
+### 헤더 표시 형식
+- **제목** (`.page-title`): 상품명 또는 카테고리명
+- **설명** (`.page-subtitle`): 현재 화면명
+
+**예시**:
+- "보험상품 > KJ대리운전 > 기사찾기" 클릭 시
+  - 제목: "KJ 대리운전"
+  - 설명: "기사찾기"
+
+### pageConfig에 메뉴 추가하기
+
+새로운 페이지를 추가할 때는 `sj-template-loader.js`의 `updatePageInfo` 메서드 내부 `pageConfig` 객체에 설정을 추가해야 합니다.
+
+**위치**: `public/js/sj-template-loader.js` (약 644번째 줄)
+
+**형식**:
+```javascript
+const pageConfig = {
+  // ... 기존 설정들 ...
+  
+  // 새 페이지 추가 예시
+  'your-page-id': {
+    title: '상품명 또는 카테고리명',
+    description: '화면명'
+  },
+  
+  // 계층 구조 예시 (KJ 대리운전)
+  'kj-driver-search': {
+    title: 'KJ 대리운전',      // 상위 카테고리명
+    description: '기사찾기'      // 현재 화면명
+  },
+  'kj-driver-company': {
+    title: 'KJ 대리운전',
+    description: '대리업체'
+  },
+  
+  // ... 기타 설정들 ...
+};
+```
+
+### 설정 규칙
+
+1. **계층 구조 반영**:
+   - 같은 상품/카테고리 하위 메뉴들은 동일한 `title` 사용
+   - 각 화면별로 다른 `description` 사용
+
+2. **예시 패턴**:
+   ```javascript
+   // 보험상품 > 근재보험 > 상담신청리스트
+   'workers-comp-consultation': {
+     title: '근재보험',           // 상위 카테고리
+     description: '상담신청리스트'  // 현재 화면
+   },
+   
+   // 지식 공유 > 실수 사례 > 전체 목록
+   'mistake-cases-list': {
+     title: '실수 사례',
+     description: '전체 목록'
+   }
+   ```
+
+3. **자동 동작**:
+   - `data-menu` 속성과 `pageConfig`의 키가 일치하면 자동으로 헤더가 업데이트됩니다
+   - 페이지 로드 시 현재 경로에 맞는 메뉴를 찾아 헤더를 자동 설정합니다
+   - 메뉴 클릭 시 즉시 헤더가 업데이트됩니다
+
+### 현재 등록된 메뉴 목록
+
+**직원전용** (6개), **보험상품** (13개), **지식 공유** (5개), **관리자** (1개) - 총 25개 메뉴 항목이 설정되어 있습니다.
+
+**참고**: 새로운 상품 페이지를 추가할 때는 반드시 `pageConfig`에 해당 `pageId`를 추가해야 헤더가 올바르게 표시됩니다.
+
 ## 4. Pharmacy 페이지 구조 참고 (applications.html)
 **참고 파일**: `/pages/pharmacy/applications.html`
 
@@ -330,6 +406,8 @@ Pharmacy와 Insurance 모두 동일한 패턴을 따릅니다:
 
 ## 8. 체크리스트
 - [ ] 사이드바 `data-menu`와 `initializePage`의 pageId 일치 여부 확인
+- [ ] **헤더 업데이트**: `sj-template-loader.js`의 `pageConfig`에 새 페이지 `pageId` 추가 확인
+- [ ] **헤더 표시 테스트**: 메뉴 클릭 시 헤더 제목/설명이 올바르게 표시되는지 확인
 - [ ] 공용 리소스(폰트/FA/Bootstrap/`sj-styles.css`) 로드 여부
 - [ ] 헤더/사이드바 컨테이너 존재 여부 (`header-container`, `sidebar-container`)
 - [ ] 로딩 오버레이/오류 없이 페이지 로드 확인
