--- a/docs/pharmacy/2025-01-약국배상-테이블-UI-개선.md
+++ b/docs/pharmacy/2025-01-약국배상-테이블-UI-개선.md
@@ -30,7 +30,7 @@
 
 **적용된 스타일**:
 ```css
-/* 입력 필드가 있는 셀들 - padding 0 */
+/* 입력 필드가 있는 셀들 - padding 0, 가운데 정렬 */
 .table tbody td:has(input),
 .table tbody td:has(select) {
   text-align: center !important;
@@ -40,6 +40,15 @@
 /* 입력 필드들 - 테두리 없음, 백그라운드 하얀색 */
 .table input.form-control,
 .table select.form-control:not(.select-status) {
+  border: none !important;
+  background-color: #ffffff !important;
+  border-radius: 0;
+  width: 100%;
+}
+
+/* select 요소도 동일한 스타일 (select-status 제외) */
+.table select.form-control:not(.select-status),
+.table select.form-control-sm:not(.select-status) {
   border: none !important;
   background-color: #ffffff !important;
   border-radius: 0;
@@ -89,6 +98,7 @@
 
 **적용된 스타일**:
 ```css
+/* 데스크톱 버전 */
 .select-status {
   border: none !important;
   background-image: url("data:image/svg+xml,..."); /* SVG 화살표 */
@@ -100,11 +110,28 @@
   -moz-appearance: none;
   padding-right: 1.75rem; /* 화살표 공간 확보 */
 }
+
+.table select.select-status {
+  border: none !important;
+  background-image: url("data:image/svg+xml,...");
+  /* 동일한 스타일 적용 */
+}
+
+/* 모바일 버전 */
+.mobile-status-select {
+  border: none !important;
+  background-image: url("data:image/svg+xml,...");
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding: 2px 1.75rem 2px 4px; /* 화살표 공간 확보 */
+}
 ```
 
 **해결된 문제**:
 - 이전에는 브라우저 기본 화살표와 커스텀 SVG 화살표가 함께 표시되어 화살표가 두 개 보이는 문제가 있었음
 - `appearance: none`으로 브라우저 기본 화살표를 숨겨 커스텀 화살표만 표시하도록 수정
+- 데스크톱과 모바일 버전 모두 동일한 스타일 적용
 
 ---
 
@@ -114,21 +141,39 @@
 
 **변경 내용**:
 - 보험료 td에 `premium-no-border` 클래스 추가
+- `.col-premium`에 직접 `border: none !important` 추가
+- `.table.table-bordered td.col-premium`에 보더 제거 스타일 추가
 - 모든 보더 제거 스타일 적용
 
 **수정된 파일**:
 - `disk-cms/public/js/pharmacy/pharmacy.js` - 클래스 추가
-- `disk-cms/public/css/sj-styles.css` - 클래스 정의
+- `disk-cms/public/css/sj-styles.css` - 클래스 정의 및 보더 제거
 - `disk-cms/public/css/pharmacy/applications.css` - 클래스 정의
 
 **적용된 스타일**:
 ```css
+/* 새 클래스로 보더 제거 */
 .premium-no-border {
   border: none !important;
   border-top: none !important;
   border-right: none !important;
   border-bottom: none !important;
   border-left: none !important;
+}
+
+/* col-premium에 직접 보더 제거 */
+.col-premium {
+  border: none !important;
+}
+
+/* table-bordered에서도 보더 제거 */
+.table.table-bordered td.col-premium,
+table.table-bordered td.col-premium {
+  border: none !important;
+  border-left: none !important;
+  border-right: none !important;
+  border-top: none !important;
+  border-bottom: none !important;
 }
 ```
 
